<resources>
    <string name="app_name">Hello Hong Kong</string>
    <string name="action_settings">Settings</string>

    <string name="waiting_for_nfc">Waiting for NFC detection</string>

    <string name="hot_spot">Hot Spots</string>
    <string name="hot_spot_welcome">Here are the famous tourist sites we recommend to you!</string>
	
	<string name="action_bar_hongkong">Hong Kong Island</string>
    <string name="action_bar_kowloon">Kowloon</string>
    <string name="action_bar_newterritories">New Territories</string>
    <string name="action_bar_all">All</string>

    <string name="title_activity_tour_hot_spot_map">TourHotSpotMapActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key">AIzaSyBkjFlzum3UNGAfVQ4LzNmk4nMn_iolVS0</string>

    <string name="location">Location</string>
    <string name="event">Event</string>

    <string name="test_long_string">
        jbsafivhrbv  hvberjhrqi avjrjh vbjhvb erbvhkabuirqi avjrjbsafiesbfhawrbfjhdbsakjvburavbjhdsbvajh abvhrbv hjs hvb
        jbsafivhrbv  hvberjhrqi avjrjh vbjhvb erbvhkabuirqi avjrjbsafiesbfhawrbfjhdbsakjvburavbjhdsbvajh abvhrbv hjs hvb
        jbsafivhrbv  hvberjhrqi avjrjh vbjhvb erbvhkabuirqi avjrjbsafiesbfhawrbfjhdbsakjvburavbjhdsbvajh abvhrbv hjs hvb
        jbsafivhrbv  hvberjhrqi avjrjh vbjhvb erbvhkabuirqi avjrjbsafiesbfhawrbfjhdbsakjvburavbjhdsbvajh abvhrbv hjs hvb
    </string>
    <string name="events_welcome">Exciting and amazing events are waiting for you, join now!</string>

</resources>
