<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hk.edu.polyu.comp.hellohongkong.app.TourHotSpotMapActivity">

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_bar_all"
        android:title="@string/action_bar_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bar_hongkong"
        android:title="@string/action_bar_hongkong"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bar_kowloon"
        android:title="@string/action_bar_kowloon"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bar_newterritories"
        android:title="@string/action_bar_newterritories"
        app:showAsAction="never" />

</menu>