<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="hk.edu.polyu.comp.hellohongkong.app.TourSpotDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>
    <!--android:background="@drawable/hot_spot_detail_alpha_background"-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/tourSpotDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tourSpotDetailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tourSpotNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="17dp"
                        android:textSize="28sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="Test Tour Spot Name"
                        android:background="@color/colorPrimary"
                        android:textAlignment="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/tourSpotDetailLocationButton"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_height="55dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:background="@color/colorAccent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_margin="8dp"
                                    android:src="@drawable/main_map_128" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:text="@string/location" />

                            </LinearLayout>


                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/tourSpotDetailEventButton"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="55dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:background="@color/colorAccent1">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_margin="8dp"
                                    android:src="@drawable/main_event_128" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:text="@string/event" />

                            </LinearLayout>


                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tourSpotDetailDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:textColor="#444444"
                android:text="@string/test_long_string" />

            <LinearLayout
                android:id="@+id/locationHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detailHeader"
                android:padding="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/main_map_128" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="@string/location" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/tourSpotDetailMapContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp">
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/eventHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detailHeader"
                android:padding="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/main_event_128" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="@string/event" />

            </LinearLayout>

            <ListView
                android:id="@+id/tourSpotDetailListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tourSpotDetailScrollView"
                android:dividerHeight="10dp"
                android:divider="#00000000"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
